--- a/link.html
+++ b/link.html
@@ -1,6 +1,6 @@
 <h2>New code</h2>
 <a href="https://www.google.com/">Google</a><br>
-<a href="https://www.google.com/" target="_blank">Google</a>
+<a href="https://www.google.com/" target="_blank">Gooe</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
